--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
     </section>
     
 <!-- "reach out" section-->
-    <section>
-        <h2>Reach Out</h2>
-        <div class= "contact-info">
+    <section id="reach-out" class="contact">
+        <h2 class="section-title secondary-border">Reach Out</h2>
+        <div class="contact-info">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3054.7484093547228!2d-111.7174718843593!3d40.036396286605836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874da4564a7f6c2f%3A0xba303a80062a314a!2s600%20Ridge%20Ln%2C%20Payson%2C%20UT%2084651!5e0!3m2!1sen!2sus!4v1642814141041!5m2!1sen!2sus" 
             width="400" 
             height="400" 
@@ -153,7 +153,7 @@
             allowfullscreen="" 
             loading="lazy">
             </iframe>"
-            <div>
+            <div class="contact-info">
                 <h3>Run Buddy</h3>
                 <p>
                     Any questions or concerns before signing up?
