add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
     </header>  
 <!-- hero section-->
     <section class="hero"> 
+        <div class="hero-cta">
+            <h2>Start Building Habits.</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum vero ipsum tempora eius quisquam et numquam vel, odit molestias amet saepe, ipsam nemo optio, quis molestiae illum quia iste illo.
+            </p>
+        </div>  
+            
         <div class="hero-form">
             <h3>Get Started Today</h3>
             <p>Fill out this form and one of our trainers will schedule a consult</p>
