added more styling

--- a/index.html
+++ b/index.html
@@ -74,15 +74,21 @@
     
 <!-- "what we do" section-->
     <section id="what-we-do" class="intro">
+      <div class="flex-row">
         <h2 class="section-title primary-border">What We Do</h2>
+      </div>
+      <div class="flex-row"> 
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum fugit hic laboriosam accusantium beatae, placeat molestias eveniet autem veritatis impedit explicabo aut culpa facilis vitae laudantium aspernatur eum facere quis!
         </p>
+      </div>
     </section>
 
 <!-- "what you do" section-->
     <section id="what-you-do" class="steps">
+      <div class="flex-row">
         <h2 class="section-title secondary-border">What You Do</h2>
+      </div>
 
         <div>
             <img src="./assets/images/step-1.svg" alt="" />
@@ -111,8 +117,9 @@
 
 <!-- "meet the trainers" section-->
     <section id="your-trainers" class="trainers">
-        <h2 class="section-title primary-border">
-            Meet The Trainers</h2>
+      <div class="flex-row">
+        <h2 class="section-title primary-border">Meet The Trainers</h2>
+      </div>  
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
                 <div class="trainer-bio text-left">
@@ -151,7 +158,9 @@
     
 <!-- "reach out" section-->
     <section id="reach-out" class="contact">
+      <div class="flex-row">
         <h2 class="section-title secondary-border">Reach Out</h2>
+      </div>
         <div class="contact-info">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3054.7484093547228!2d-111.7174718843593!3d40.036396286605836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874da4564a7f6c2f%3A0xba303a80062a314a!2s600%20Ridge%20Ln%2C%20Payson%2C%20UT%2084651!5e0!3m2!1sen!2sus!4v1642814141041!5m2!1sen!2sus" 
             width="400" 
