--- a/index.html
+++ b/index.html
@@ -144,15 +144,16 @@
     </section>
 
 <!-- "meet the trainers" section-->
-    <section id="your-trainers" class="trainers">
+    <section id="your-trainers">
       <div class="flex-row">
         <h2 class="section-title primary-border">Meet The Trainers</h2>
       </div>  
+        <div class="trainers">
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-                <div class="trainer-bio text-left">
-                    <h3>Arron Stephens</h3>
-                    <h4>Speed / Strength</h4>
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Arron Stephens</h3>
+                    <h4 class="trainer-role">Speed / Strength</h4>
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia rem aliquam mollitia placeat praesentium corporis maiores quod architecto corrupti excepturi temporibus et, ipsam tempore recusandae perferendis maxime natus ratione harum.
                     </p>
@@ -161,27 +162,28 @@
 
             <!--second trainer bio-->
             <article class="trainer">
-                <div class="trainer-bio text-right">
-                    <h3>Joanna Gill</h3>
-                    <h4>Endurance</h4>
+                <img src="./assets/images/trainer-2.jpg" alt="Jonna Gill cooling off after a workout" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Joanna Gill</h3>
+                    <h4 class="trainer-role">Endurance</h4>
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni hic aliquid dolorum laboriosam voluptates porro, omnis sapiente molestias exercitationem suscipit aliquam corrupti obcaecati! Culpa odit, sequi error labore tempora in.
                     </p>
                 </div>
-                <img src="./assets/images/trainer-2.jpg" alt="Jonna Gill cooling off after a workout" />
             </article>
 
             <!--third trainer bio-->
             <article class="trainer">
                 <img src="assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-                <div class="trainer-bio text-left">
-                    <h3>Harry "the Headband" Smith</h3>
-                    <h4>Strength</h4>
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Harry "the Headband" Smith</h3>
+                    <h4 class="trainer-role">Strength</h4>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur provident odio ea ex esse recusandae soluta unde quibusdam! Rem ab tenetur odio aliquam, dignissimos nisi quidem. Pariatur, exercitationem molestiae? Commodi?
                     </p>
                 </div>
             </article>
+        </div>    
     </section>
     
 <!-- "reach out" section-->
