--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <title>Run Buddy</title>
     </head>
     <body>
+        <!--Commit-->
  <!-- navigation -->       
     <header>
       <h1>
